fix: Use Collections.unmodifiableMap instead of Map.of for Java 8 compat
Map.of() is Java 9+ only, but the build target is -source 8.
Use HashMap + Collections.unmodifiableMap() to express immutable
semantics while maintaining Java 8 compatibility.

Co-Authored-By: Agent
Signed-off-by: longruoluo <long.liu@huawei.com>
Change-Id: I4479975dbb57e38856825b7fe62ab2d666472de2